--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "@prisma/client": "^6.15.0",
     "@tailwindcss/vite": "^4.1.12",
     "bcrypt": "^6.0.0",
+    "next": "^15.5.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.12",
@@ -20,6 +24,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/bcrypt": "^6.0.0",
+    "@types/next": "^8.0.7",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react-swc": "^4.0.0",
